tests/NormalTests/paczka1/fuzzy1/73589461.err
Error in line 14: mizYdYh S887 38,1
Error in line 18: xz9F S887 41,5
Error in line 29: hOTDNLA3 S887 )94,9
Error in line 24: 17zSf80pW S930 44,1
Error in line 36: cauM0lDld S930 77,9
